# Arch-assist

./: README.md
arch_sim/: main.py
arch_sim/rust/: Cargo.toml  README.md
arch_sim/rust/src/: main.rs
arch_sim/simulator/: AGENTS.md  ai_openai.py  ai_runner.py  net.py  pacman.py  paru.py  runner.py  safety.py  scenarios.py  state.py  systemctl.py
arch_sim/simulator/tests/: test_arch_like.py
arch_sim/tests/: test_ai_real.py  test_aur.py  test_basic.py  test_errors.py
rust/: Cargo.toml
rust/src/: main.rs
